@@ -23,7 +23,7 @@
 ///////////////////////////////////////////////////////////////////////////////
 namespace boost {
 namespace wave {
-namespace cpp_token_sample {
+namespace cpplexer {
 
 ///////////////////////////////////////////////////////////////////////////////
 //  forward declaration of the token type
@@ -115,7 +115,7 @@ operator<< (std::ostream &stream, slex_token<PositionT> const &object)
 }
 
 ///////////////////////////////////////////////////////////////////////////////
-}   // namespace cpp_token_sample
+}   // namespace cpplexer
 }   // namespace wave
 }   // namespace boost
 
